many changes in build script, created drafts and planne

--- a/drafts/index.html
+++ b/drafts/index.html
@@ -15,6 +15,9 @@
   <p>Cringed Coder&#x27;s posts storage.</p>
 
     <ul>
+      <li><a href="/posts/list-implementation-in-javascript.html">List implementation in JavaScript</a></li>
+      <li><a href="/posts/firebase-and-filestack-tandem.html">Firebase and Filestack tandem</a></li>
+      <li><a href="/posts/different-functionalities-using-window-matchmedia.html">Different functionalities using window.matchMedia</a></li>
       <li><a href="/posts/multiple-ssh-keys-and-github-users.html">Multiple SSH keys and Github users</a></li>
       <li><a href="/posts/pushing-subtree-to-master.html">Pushing subtree to master</a></li>
     </ul>
